samples/_failures_safe/1761168776_8a24cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8150a5ab.c:169:1: error: expected ‘{’ at end of input
  169 | void print_token_type(enum
      | ^~~~
